conformance/tests/backendtlspolicy-grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: backendtlspolicy-grpcroute
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
  hostnames:
  - abc.example.com
  rules:
  - matches:
    - method:
        service: gateway_api_conformance.echo_basic.grpcecho.GrpcEcho
        method: Echo
    backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-grpc-test
      port: 443
  - matches:
    - method:
        service: gateway_api_conformance.echo_basic.grpcecho.GrpcEcho
        method: EchoTwo
    backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-grpc-host-mismatch-test
      port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: backendtlspolicy-grpcroute-cert-mismatch
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
  hostnames:
  - cert-mismatch.example.com
  rules:
  - matches:
    - method:
        service: gateway_api_conformance.echo_basic.grpcecho.GrpcEcho
        method: Echo
    backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-grpc-cert-mismatch-test
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-grpc-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: grpc-infra-backend-v1
  ports:
  - name: "btls"
    protocol: TCP
    port: 443
    targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-grpc-host-mismatch-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: grpc-infra-backend-v1
  ports:
  - name: "btls"
    protocol: TCP
    port: 443
    targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-grpc-cert-mismatch-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: grpc-infra-backend-v1
  ports:
  - name: "btls"
    protocol: TCP
    port: 443
    targetPort: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: grpc-normative-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: "backendtlspolicy-grpc-test"
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: grpc-host-mismatch
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: "backendtlspolicy-grpc-host-mismatch-test"
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      name: "tls-checks-ca-certificate"
    hostname: "mismatch.example.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: grpc-cert-mismatch
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: "backendtlspolicy-grpc-cert-mismatch-test"
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      name: "mismatch-ca-certificate"
    hostname: "abc.example.com"
